ensure dropdown works on mobile and toggles correctly on resize

--- a/styles/blocks/_dropdown.scss
+++ b/styles/blocks/_dropdown.scss
@@ -80,13 +80,13 @@
       }
     }
   }
-  @media (any-hover: none) {
-    &:active {
-      .dropdown__content {
-        opacity: 1;
-        transform: translateY(0);
-        pointer-events: auto;
-      }
-    }
-  }
+  // @media (any-hover: none) {
+  //   &:active {
+  //     .dropdown__content {
+  //       opacity: 1;
+  //       transform: translateY(0);
+  //       pointer-events: auto;
+  //     }
+  //   }
+  // }
 }
