--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -114,6 +114,7 @@
   }
 }
 .item-language {
+  padding: rem(4);
   &__language {
   }
 
