--- a/styles/style.css
+++ b/styles/style.css
@@ -339,6 +339,9 @@ a:hover {
   }
 }
 
+.item-language {
+  padding: 0.25rem;
+}
 @media (min-width: 61.99875em) {
   .item-burger {
     display: none;
@@ -2213,13 +2216,6 @@ a:hover {
   }
   .dropdown:hover .icon-arrow-down::after {
     transform: rotate(-90deg);
-  }
-}
-@media (any-hover: none) {
-  .dropdown:active .dropdown__content {
-    opacity: 1;
-    transform: translateY(0);
-    pointer-events: auto;
   }
 }
 
